# deom

./: .eslintignore  .gitignore  package-lock.json  package.json
cplus/: CMakeLists.txt  context.cpp  context.h  main.cpp  pre.js  test.cpp
public/: context.cpp  main.cpp  test.cpp
src/: index.js  index.tsx
src/components/app/: app.test.js  index.js  index.tsx
src/helpers/: wasm-ready.js  wasm-ready.tsx  wasm.js  wasm.ts
src/wasm/: demo.js  pi.js  pi_helper.js
